fix deploy token

--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -32,4 +32,4 @@ jobs:
         env:
           PUBLISH_DIR: _site 
           PUBLISH_BRANCH: gh-pages
-          GITHUB_TOKEN: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
